<?xml version="1.0" encoding="utf-8"?>

<resources>

	<string name="app_name">Bitcoin Wallet</string>
	<string name="toast_wallet_reset">Wallet was reset,\nwill take some time to recover</string>

	<string name="wallet_content_disclaimer">This is entirely experimental. Use at your own risk! Read the safety notes.</string>
	<string name="wallet_message_blockchain_hours">Blockchain %1$s, %2$d hours behind</string>
	<string name="wallet_message_blockchain_days">Blockchain %1$s, %2$d days behind</string>
	<string name="wallet_message_blockchain_weeks">Blockchain %1$s, %2$d weeks behind</string>
	<string name="wallet_message_blockchain_downloading">downloading</string>
	<string name="wallet_message_blockchain_stalled">stalled</string>
	<string name="wallet_message_blockchain_problem_storage">Blockchain not downloading: Storage problem</string>
	<string name="wallet_message_blockchain_problem_power">Blockchain not downloading: Power problem</string>
	<string name="wallet_message_blockchain_problem_network">Blockchain not downloading: Network problem</string>
	<string name="wallet_address_fragment_your">Your Bitcoin Address:</string>
	<string name="wallet_address_fragment_clipboard_msg">Bitcoin address copied to clipboard</string>
	<string name="wallet_address_fragment_share_dialog_title">Share your bitcoin address…</string>
	<string-array name="wallet_address_fragment_context">
		<item>List all</item>
		<item>Show QR code</item>
		<item>Copy to clipboard</item>
		<item>Share</item>
	</string-array>
	<string name="wallet_addresses_fragment_add_dialog_title">Add Bitcoin address</string>
	<string name="wallet_addresses_fragment_add_dialog_message">Bitcoin addresses cannot be deleted. Do you want to add a new address to your wallet?</string>
	<string name="wallet_addresses_fragment_add_dialog_positive">Add address</string>
	<string name="wallet_addresses_context_determine_creation_time">Determine creation time</string>
	<string name="wallet_balance_fragment_local_value">worth about %1$s %2$s</string>
	<string name="exchange_rates_fragment_empty_text">Could not load exchange rates</string>
	<string name="wallet_transactions_fragment_tab_received">Received</string>
	<string name="wallet_transactions_fragment_tab_all">Both</string>
	<string name="wallet_transactions_fragment_tab_sent">Sent</string>
	<string name="wallet_transactions_fragment_empty_text_received">No Bitcoins received so far</string>
	<string name="wallet_transactions_fragment_empty_text_sent">No Bitcoins sent so far</string>
	<string name="wallet_transactions_context_edit_address_title">Add/edit address</string>
	<string name="wallet_transactions_context_show_transaction_title">Transaction details</string>
	<string name="wallet_options_request_coins">Request coins</string>
	<string name="wallet_options_send_coins">Send coins</string>
	<string name="wallet_options_about">About</string>
	<string name="wallet_options_safety">Safety notes</string>
	<string name="wallet_options_donate">Tip / Donate</string>
	<string name="wallet_options_help">Help</string>
	<string name="wallet_low_storage_dialog_title">Internal Device Storage Space Low!</string>
	<string name="wallet_low_storage_dialog_msg">Bitcoin Wallet uses internal storage for remembering transactions and blocks. If it runs out of
		space, it will stop working and your Bitcoins are at risk!\n\nDo you want to open the Application Manager in order to
		uninstall unneeded apps?</string>
	<string name="wallet_low_storage_dialog_button_apps">Manage Apps</string>
	<string name="wallet_timeskew_dialog_title">Check your time settings!</string>
	<string name="wallet_timeskew_dialog_msg">Your device time is off by %d minutes. You probably cannot send or receive Bitcoins due to this
		problem.\n\nYou should check and correct your time and timezone settings.</string>
	<string name="wallet_timeskew_dialog_button_settings">Settings</string>

	<string name="send_coins_activity_title">Send Bitcoins</string>
	<string name="send_coins_install_qr_scanner_msg">Please install ZXing QR-code scanner or Goggles!</string>
	<string name="send_coins_uri_parse_error_title">Invalid Bitcoin URI</string>
	<string name="send_coins_parse_address_error_msg">Got invalid bitcoin address!\n(Mixing up Testnet/Prodnet?)</string>
	<string name="send_coins_fragment_receiving_address_label">Pay to</string>
	<string name="send_coins_fragment_receiving_address_hint">type address or name</string>
	<string name="send_coins_fragment_receiving_address_error">Invalid Bitcoin Address!</string>
	<string name="send_coins_fragment_available_label">Available for spending</string>
	<string name="send_coins_fragment_pending">(BTC %s waiting for confirmation)</string>
	<string name="send_coins_fragment_amount_label">Amount to pay</string>
	<string name="send_coins_fragment_fee_label">Fee (optional)</string>
	<string name="send_coins_fragment_button_send">Send</string>
	<string name="send_coins_fragment_button_back">Back</string>
	<string name="send_coins_sending_msg">Sending…</string>
	<string name="send_coins_sent_msg">Sent!</string>
	<string name="send_coins_add_address_dialog_title">The recipient is not yet contained in your address book.\n\nDo you want to add the address?</string>
	<string name="send_coins_add_address_dialog_button_add">Add address</string>
	<string name="send_coins_error_msg">Problem sending coins!</string>
	<string name="send_coins_success_msg">BTC %s sent!</string>

	<string name="request_coins_activity_title">Request Bitcoins</string>
	<string name="request_coins_fragment_amount_label">Requested amount (optional)</string>
	<string name="request_coins_fragment_qr_label">Have this QR-code scanned by the sender:</string>
	<string name="request_coins_fragment_nfc_enabled">Or touch with NFC enabled device.</string>
	<string name="request_coins_clipboard_msg">Bitcoin request copied to clipboard</string>
	<string name="request_coins_share_dialog_title">Share request for Bitcoins…</string>

	<string name="address_book_activity_title">Address Book</string>
	<string name="address_book_empty_text">No entries in address book</string>
	<string name="address_book_context_send_title">Send Bitcoins to address</string>
	<string name="address_book_context_edit_title">Edit address</string>
	<string name="address_book_context_remove_title">Remove address</string>

	<string name="edit_address_book_entry_dialog_title_add">Add address</string>
	<string name="edit_address_book_entry_dialog_title_edit">Edit address</string>
	<string name="edit_address_book_entry_dialog_address_label">Address</string>
	<string name="edit_address_book_entry_dialog_label_label">Name</string>
	<string name="edit_address_book_entry_dialog_button_add">Add</string>
	<string name="edit_address_book_entry_dialog_button_edit">Save</string>
	<string name="edit_address_book_entry_dialog_button_delete">Delete</string>

	<string name="transaction_activity_title">Transaction</string>

	<string name="transaction_fragment_time_label">Date</string>
	<string name="transaction_fragment_time_today">today</string>
	<string name="transaction_fragment_amount_sent_label">Sent</string>
	<string name="transaction_fragment_amount_received_label">Received</string>
	<string name="transaction_fragment_from_label">Sender</string>
	<string name="transaction_fragment_to_label">Receiver</string>
	<string name="transaction_fragment_you">you</string>
	<string name="transaction_fragment_status_label">Status</string>
	<string name="transaction_fragment_status_unknown">unknown</string>
	<string name="transaction_fragment_status_pending">waiting for confirmation</string>
	<string name="transaction_fragment_status_confirmed">confirmed</string>
	<string name="transaction_fragment_status_dead">dead</string>
	<string name="transaction_fragment_hash_label">Hash</string>
	<string name="transaction_fragment_length_label">Length</string>

	<string name="amount_calculator_dialog_title">Currency calculator</string>
	<string name="amount_calculator_dialog_button_use">Use</string>

	<string name="preferences_about_title">About</string>
	<string name="preferences_license_title">License</string>
	<string name="preferences_credits_bitcoinj_title">"This app is using 'bitcoinj'"</string>
	<string name="preferences_credits_zxing_title">"This app is using 'zxing'"</string>
	<string name="preferences_credits_icon_title">"This app is using an icon by 'bitboy'"</string>
	<string name="preferences_author_twitter_title">Author at Twitter</string>
	<string name="preferences_author_googleplus_title">Author at Google+</string>
	<string name="preferences_credits_market_app_title">Android Market App Page</string>
	<string name="preferences_credits_market_publisher_title">Other Apps of Author</string>

	<string name="notification_coins_received_msg">Received BTC %s</string>
	<string name="notification_peers_connected_msg">%d peers connected</string>

	<!-- generic buttons -->
	<string name="button_dismiss">Dismiss</string>
	<string name="button_cancel">Cancel</string>

</resources>
