<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

	<PreferenceCategory android:title="About">

		<Preference android:key="about_version" android:title="Version" />
		<Preference android:title="Copyright" android:summary="© 2011, Andreas Schildbach" />
		<Preference android:key="about_license" android:title="@string/preferences_license_title" />
		<Preference android:key="about_source" android:title="Source Code" />
		<Preference android:key="about_credits_bitcoinj" android:title="@string/preferences_credits_bitcoinj_title" />
		<Preference android:key="about_credits_zxing" android:title="@string/preferences_credits_zxing_title" />
		<Preference android:key="about_credits_icon" android:title="@string/preferences_credits_icon_title" />
		<Preference android:key="about_twitter" android:title="@string/preferences_twitter_title" android:summary="\@android_bitcoin" />
		<Preference android:key="about_market_app" android:title="@string/preferences_credits_market_app_title" />
		<Preference android:key="about_market_publisher" android:title="@string/preferences_credits_market_publisher_title" />

	</PreferenceCategory>

</PreferenceScreen>
